Polish tests